--- a/app/src/main/res/layout/subtitle_item_lauyout.xml
+++ b/app/src/main/res/layout/subtitle_item_lauyout.xml
@@ -4,13 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <View
+        android:id="@+id/bg_high_light"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#00ffff"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/subtitle_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:includeFontPadding="false"
         android:textColor="#000000"
-        android:textSize="16dp"
+        android:textSize="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999"
+        app:layout_constraintTop_toBottomOf="@id/subtitle_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
