--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/test_btn"
+    <TextView
+        android:id="@+id/url_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/test_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="播放"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/download_btn"
+        app:layout_constraintTop_toBottomOf="@id/url_text"
+        app:layout_constraintWidth_percent="0.44" />
+
+    <Button
+        android:id="@+id/download_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="下载"
+        app:layout_constraintLeft_toRightOf="@+id/test_btn"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/url_text"
+        app:layout_constraintWidth_percent="0.44" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
